quite a few changes, added missing functions and other stuff
